data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2110.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\7f\01\7f\02\94\80\80\80\00\01\03\65\6e\76\0c"
    "\65\78\74\65\72\6e\61\6c\46\75\6e\63\00\00\03\82"
    "\80\80\80\00\01\00\0a\95\80\80\80\00\01\8f\80\80"
    "\80\00\00\20\00\04\7f\41\2a\10\00\00\05\41\00\0b"
    "\0b"
  )
""
)